# codechain-miner

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs  main.rs  message.rs
src/rpc/: http.rs  mod.rs
src/rpc/stratum/: client.rs  dispatch.rs  error.rs  mod.rs  runner.rs
src/worker/: blake.rs  cuckoo.rs  mod.rs  work.rs
