[package]
name = "codechain-miner"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
bytes = "0.4"
ethereum-types = "0.3.2"
futures = "0.1.21"
hyper = "0.12"
log = "0.4.3"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-executor = "0.1.0"
